--- a/frontend/src/pages/chat.css
+++ b/frontend/src/pages/chat.css
@@ -1,7 +1,7 @@
 .background-container {
     position: relative;
     height: 100vh;
-    background-image: url('../../Images/background.jpg');
+    background-image: url('../Images/background.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
